Created views for staging area tables

--- a/desafiodw/dbt_project.yml
+++ b/desafiodw/dbt_project.yml
@@ -40,6 +40,7 @@ models:
       +materialized: view
       +schema: staging
 
+# Utilizado para carregar os dados no DW.
 seeds:
   adventureworks:
     source:
