Created .yml files, intermediate and mart layers

--- a/desafiodw/dbt_project.yml
+++ b/desafiodw/dbt_project.yml
@@ -39,6 +39,9 @@ models:
     staging:
       +materialized: view
       +schema: staging
+    intermediate:
+      +materialized: view
+      +schema: intermediate
 
 # Utilizado para carregar os dados no DW.
 seeds:
